force-app/main/default/objects/Cashflow__c/Cashflow__c.object-meta.xml
<CustomObject>
    <description>This object is used to store Inflow and outflow of lending money</description>
    <label>Cashflow</label>
    <nameField>
        <displayFormat>CF-{000000}</displayFormat>
        <label>CF-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cashflows</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>