force-app/main/default/objects/Cashflow__c/fields/Cashflow__c.field-meta.xml
<CustomField>
    <fullName>Cashflow__c</fullName>
    <description>Used to record both in- and outflows.</description>
    <inlineHelpText>Used to record both in- and outflows</inlineHelpText>
    <label>Cashflow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>