force-app/main/default/objects/Cashflow__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date of inflow or outflow</description>
    <inlineHelpText>Date of inflow or outflow</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>