force-app/main/default/objects/Cashflow__c/validationRules/Cashflow_can_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Cashflow_can_not_be_empty</fullName>
    <active>true</active>
    <description>It is an error if the Cashflow field is empty. This rule enforces records being created/updated through the API and Apex.</description>
    <errorConditionFormula>ISNULL(Cashflow__c)</errorConditionFormula>
    <errorDisplayField>Cashflow__c</errorDisplayField>
    <errorMessage>Cashflow can not be empty</errorMessage>
</ValidationRule>