force-app/main/default/objects/Cashflow__c/validationRules/Date_can_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_can_not_be_empty</fullName>
    <active>true</active>
    <description>It is an error if the Date field is empty. This rule enforces records being created/updated through the API and Apex.</description>
    <errorConditionFormula>ISNULL(Date__c)</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Date can not be empty</errorMessage>
</ValidationRule>